# xiaomi

./: .gitignore  BUILD_GUIDE.md  COOKIE_LOGIN_GUIDE.md  Cookie功能说明.md  Cookie简化使用说明.md  README.md  build_exe.py  create_icon.py  gui.py  login.py  main.py  main_android.py  main_ios.py  main_macos.py  main_windows.py  manage.py  pyproject.toml  小米钱包3.0.py
.github/workflows/: build-app.yml  daily-checkin.yml
